frontend/test/should_fail/queries_typeof.grg
#using "queries.gm"

test sameCompanySharedInterestBU(subject:namedObject)
{
	subject -:WORKS_FOR-> company:namedObject <-:WORKS_FOR- person:namedObject;
	iterated {
		subject -:INTERESTED_IN-> interest:namedObject <-:INTERESTED_IN- person;
	---
		yield {
			interests.add(typeof(interest).name); // type name accessed
			yield score = score + 1;
		}
	}
---
	def var score:double = 0;
	def ref interests:array<string> = array<string>[];
}
